# simple_compiler

./: .gitignore  CMakeLists.txt  ast.h  bubblesort.pas  code.asm  compiler.sh  corrected_file.pas  enumTypes.c  example.y  ffsets.c  grammar.txt  grammar2.txt  grammar_ebnf.txt  main.c  main.cpp  miniPascal.l  nestet.txt  new_code.c  parser.c  parser.h  parser_functions.c  parser_functions.h  parser_yacc.y  printout.c  printout.cpp  printout.h  quicksort.pas  sample.pas  scanner.l  scanner_yacc.l  tokens.txt  yacc_comp.sh
data/: corrected_file.pas  nestet.txt  sample.pas  sample2.pas  short.pas  test.txt
exam/: README.txt  dump.c  exam_functions.c  exam_functions.h  micro_ast.h  parser.y  run_command.sh  scanner.l
handwritten_parser/: compiler.sh  enumTypes.h  ffsets.c  ffsets.h  miniPascal.l
lesson_examples/: count.l  example.l
theory/: first_follow.txt  grammar.txt  grammar_ebnf.txt  original_grammar.txt
